re PR c++/46220 (Error: invalid covariant return type generated for incomplete class type and different qualifer)

PR c++/46220
	* search.c (check_final_overrider): Allow pointer to same incomplete
	class type with different cv-quals.

From-SVN: r170676